2010-04-04  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-with-popup-buffer): Make &optional parameters
	&key parameters, add modes parameter.
	slime-with-popup-buffer sets up some buffer local variables,
	but enabling major modes kills all buffer locals, so modes should
	be enabled before setting them.
	Adopt changes to slime-with-popup-buffer where needed.
	This fixes several bugs with popup buffers on non-default connections.

2010-04-03  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-update-threads-buffer): New formatting, with labels
	and additional information provided by the backend.
	* swank-allegro.lisp (thread-attributes): Move process-priority from
	thread-status.

2010-03-29  Helmut Eller  <heller@common-lisp.net>

	* slime.el: Add gud as compile-time dependency.

2010-03-29  Helmut Eller  <heller@common-lisp.net>

	Compile swank-sbcl-exts only for SBCL.

	* swank-loader.lisp (*contribs*): Add #+sbcl.

2010-03-29  Helmut Eller  <heller@common-lisp.net>

	Minor cleanups

	* swank.lisp (connection): Make socket-io read-only again.
	(*connections*): Move declaration before first use.
	(finish-connection-setup): Merged into make-connection.
	(accept-connections): Renamed from serve-connection and
	reorganized so that the socket-io slot can be read-only.
	(accept-authenticated-connection): Renamed to authenticate-client.
	Update callers accordingly.

2010-03-29  Tobias C. Rittweiler <tcr@freebits.de>

	* swank.lisp (connection-info): Use princ-to-string rather than
	prin1-to-string as the latter may barf if *print-readably* is nil.

2010-03-27  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-check-location-buffer-name-sanity): Less duplication,
	reuse slime-check-location-filename-sanity.
	(slime-check-location-filename-sanity): Do any work only when
	slime-warn-when-possibly-tricked-by-M-. is non-nil.

2010-03-21  Stas Boukarev  <stassats@gmail.com>

	* start-swank.lisp: Document options to swank-loader:init.
